%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Ship_Player
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: HorizontalSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: VerticalSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: HorizontalStill
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: VerticallStill
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &20600000
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - m_Motion: {fileID: 7400000, guid: 93b8cc96130dd4e4e8ae1d93158ede97, type: 2}
    m_Threshold: -1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: bc3d9ab1aca5d554694b263946065c8a, type: 2}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: HorizontalSpeed
  m_BlendParameterY: HorizontalSpeed
  m_MinThreshold: -1
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!206 &20680394
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - m_Motion: {fileID: 7400000, guid: fda2c11cc3537c54cb37e8e404230343, type: 2}
    m_Threshold: -1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: a63ea876810b93e459ccbed154b7f9e1, type: 2}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: VerticalSpeed
  m_BlendParameterY: HorizontalSpeed
  m_MinThreshold: -1
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 0}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110118993
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110235478}
  m_DstState: {fileID: 110254008}
  m_TransitionDuration: .125
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: HorizontalSpeed
    m_EventTreshold: 0
    m_ExitTime: .875
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110119994
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110235478}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .125
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: VerticalSpeed
    m_EventTreshold: 0
    m_ExitTime: .875
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110141936
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110235478}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .125
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: VerticalSpeed
    m_EventTreshold: 0
    m_ExitTime: .875
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110150529
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110235478}
  m_TransitionDuration: .5
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: VerticallStill
    m_EventTreshold: 0
    m_ExitTime: .5
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110172185
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110254008}
  m_DstState: {fileID: 110235478}
  m_TransitionDuration: .5
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: VerticallStill
    m_EventTreshold: 0
    m_ExitTime: .5
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110189251
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110235478}
  m_DstState: {fileID: 110254008}
  m_TransitionDuration: .125
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: HorizontalSpeed
    m_EventTreshold: 0
    m_ExitTime: .875
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110198897
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Pan
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 20680394}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 324, y: 168, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110235478
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idel
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 38e7e291a8fc1fb41b650f0348a23354, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 180, y: 312, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110254008
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Tilt
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 20600000}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 84, y: 168, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110235478}
  m_States:
  - {fileID: 110235478}
  - {fileID: 110254008}
  - {fileID: 110200000}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110150529}
    data:
      first: {fileID: 110254008}
      second:
      - {fileID: 110172185}
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 110235478}
      second:
      - {fileID: 110118993}
      - {fileID: 110189251}
      - {fileID: 110141936}
      - {fileID: 110119994}
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 0}
      second: []
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: -228, y: 216, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
